--- a/package.json
+++ b/package.json
@@ -4,11 +4,16 @@
   "description": "",
   "main": "script.js",
   "scripts": {
-    "compile:sass":"node-sass scss/main.scss css/style.css -w"
+    "compile:sass": "node-sass scss/main.scss css/style.css -w"
   },
   "author": "Robert_Klasen <robfklasen@gmail.com>",
   "license": "ISC",
   "devDependencies": {
+    "gulp": "^4.0.2",
+    "gulp-nunjucks-render": "^2.2.3",
     "node-sass": "^7.0.1"
+  },
+  "dependencies": {
+    "gulp-render-nunjucks": "^2.0.1"
   }
 }
