--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "devDependencies": {
     "gulp": "^4.0.2",
+    "gulp-data": "^1.3.1",
     "gulp-nunjucks-render": "^2.2.3",
     "node-sass": "^7.0.1"
   },
